force-app/main/default/objects/PBS_Building__c/PBS_Building__c.object-meta.xml
<CustomObject>
    <description>PBS Common Building Object</description>
    <label>PBS Building</label>
    <nameField>
        <displayFormat>PBS-BLDG-{000000000}</displayFormat>
        <label>PBS Building Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>