force-app/main/default/objects/PBS_Building__c/fields/Address_Override_Ind__c.field-meta.xml
<CustomField>
    <fullName>Address_Override_Ind__c</fullName>
    <label>Address Override Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>