force-app/main/default/objects/PBS_Building__c/fields/Address_Validated_Ind__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_Ind__c</fullName>
    <label>Address Validated Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>