force-app/main/default/objects/PBS_Building__c/fields/Building_ID__c.field-meta.xml
<CustomField>
    <fullName>Building_ID__c</fullName>
    <externalId>true</externalId>
    <label>Building ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>