force-app/main/default/objects/PBS_Building__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>