force-app/main/default/objects/PBS_Building__c/fields/Building_RU__c.field-meta.xml
<CustomField>
    <fullName>Building_RU__c</fullName>
    <label>Building RU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>