force-app/main/default/objects/PBS_Building__c/fields/Building_USF__c.field-meta.xml
<CustomField>
    <fullName>Building_USF__c</fullName>
    <label>Building USF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>