force-app/main/default/objects/PBS_Building__c/fields/CBSA_Code__c.field-meta.xml
<CustomField>
    <fullName>CBSA_Code__c</fullName>
    <label>CBSA Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>