force-app/main/default/objects/PBS_Building__c/fields/CCSR_ID__c.field-meta.xml
<CustomField>
    <fullName>CCSR_ID__c</fullName>
    <label>CCSR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>