force-app/main/default/objects/PBS_Building__c/fields/Central_Bus_Unit_Ind__c.field-meta.xml
<CustomField>
    <fullName>Central_Bus_Unit_Ind__c</fullName>
    <label>Central Bus Unit Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>