force-app/main/default/objects/PBS_Building__c/fields/Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District__c</fullName>
    <label>Congressional District</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>