force-app/main/default/objects/PBS_Building__c/fields/Congressional_District_Name__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District_Name__c</fullName>
    <label>Congressional District Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>