force-app/main/default/objects/PBS_Building__c/fields/Construct_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Construct_Complete_Date__c</fullName>
    <label>Construct Complete Date</label>
    <type>Date</type>
</CustomField>