force-app/main/default/objects/PBS_Building__c/fields/County_City_Code__c.field-meta.xml
<CustomField>
    <fullName>County_City_Code__c</fullName>
    <label>County City Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>