force-app/main/default/objects/PBS_Building__c/fields/Est_Gross_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Est_Gross_Sqft__c</fullName>
    <label>Est Gross Sqft</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>