force-app/main/default/objects/PBS_Building__c/fields/Est_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Est_Parking_Spaces__c</fullName>
    <label>Est Parking Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>