force-app/main/default/objects/PBS_Building__c/fields/Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Id__c</fullName>
    <label>Facility Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>