force-app/main/default/objects/PBS_Building__c/fields/Field_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Field_Office_Code__c</fullName>
    <label>Field Office Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>