force-app/main/default/objects/PBS_Building__c/fields/Frpc_Mission_Depend_Code__c.field-meta.xml
<CustomField>
    <fullName>Frpc_Mission_Depend_Code__c</fullName>
    <label>Frpc Mission Depend Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>