force-app/main/default/objects/PBS_Building__c/fields/Frpc_Real_Prop_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Frpc_Real_Prop_Type_Code__c</fullName>
    <label>Frpc Real Prop Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>