force-app/main/default/objects/PBS_Building__c/fields/Frpc_Value__c.field-meta.xml
<CustomField>
    <fullName>Frpc_Value__c</fullName>
    <label>Frpc Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>