force-app/main/default/objects/PBS_Building__c/fields/Frpc_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Frpc_Value_Date__c</fullName>
    <label>Frpc Value Date</label>
    <type>Date</type>
</CustomField>