force-app/main/default/objects/PBS_Building__c/fields/Location_Code_Plus__c.field-meta.xml
<CustomField>
    <fullName>Location_Code_Plus__c</fullName>
    <externalId>true</externalId>
    <label>Location Code Plus</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>