force-app/main/default/objects/PBS_Building__c/fields/Location_Will_Close_Dt__c.field-meta.xml
<CustomField>
    <fullName>Location_Will_Close_Dt__c</fullName>
    <label>Location Will Close Dt</label>
    <type>Date</type>
</CustomField>