force-app/main/default/objects/PBS_Building__c/fields/Occupancy_Right_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Right_Code__c</fullName>
    <label>Occupancy Right Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>