force-app/main/default/objects/PBS_Building__c/fields/Predominant_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>Predominant_Use_Code__c</fullName>
    <label>Predominant Use Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>