force-app/main/default/objects/PBS_Building__c/fields/Source_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Source_Updated_By__c</fullName>
    <label>Source Updated By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>