force-app/main/default/objects/PBS_Building__c/fields/Source_Updated_Ts__c.field-meta.xml
<CustomField>
    <fullName>Source_Updated_Ts__c</fullName>
    <label>Source Updated Ts</label>
    <type>DateTime</type>
</CustomField>