force-app/main/default/objects/PBS_Building__c/fields/Total_Number_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Floors__c</fullName>
    <label>Total Number Of Floors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>