force-app/main/default/objects/PBS_Building__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>