force-app/main/default/objects/PBS_Building__c/fields/Zero_Sqft_Esmart_Own_Ind__c.field-meta.xml
<CustomField>
    <fullName>Zero_Sqft_Esmart_Own_Ind__c</fullName>
    <label>Zero Sqft Esmart Own Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>